# books-api

./: README.md  book.http  pyproject.toml
api/: serializers.py  tests.py  urls.py  views.py
books/: models.py  urls.py  views.py
books/migrations/: 0001_initial.py  0002_book.py  0003_auto_20211103_1227.py  0004_rename_name_book_title.py
books/templates/books/: book_list.html
books/tests/integration/models/: __init__.py  test_book.py
books/tests/unit/models/: test_author.py
config/: settings.py  urls.py
